# ibutsu-client-python

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  codecov.yml  pyproject.toml  regenerate-client.sh  setup.py  tox.ini
.github/workflows/: lint.yml  python-publish.yml  tests.yml
.openapi-generator/: FILES
docs/: AccountRecovery.md  AccountRegistration.md  AccountReset.md  AdminProjectManagementApi.md  AdminUserManagementApi.md  Artifact.md  ArtifactApi.md  ArtifactList.md  CreateToken.md  Credentials.md  Dashboard.md  DashboardApi.md  DashboardList.md  GetReportTypes200ResponseInner.md  Group.md  GroupApi.md  GroupList.md  Health.md  HealthApi.md  HealthInfo.md  ImportApi.md  InlineResponse200.md  LoginApi.md  LoginConfig.md  LoginError.md  LoginSupport.md  LoginToken.md  ModelImport.md  Pagination.md  Project.md  ProjectApi.md  ProjectList.md  Report.md  ReportApi.md  ReportList.md  ReportParameters.md  Result.md  ResultApi.md  ResultList.md  Run.md  (+16 more)
ibutsu_client/: __init__.py  api_client.py  api_client.py.rej  configuration.py  exceptions.py  model_utils.py  rest.py
ibutsu_client/api/: __init__.py  admin_project_management_api.py  admin_user_management_api.py  artifact_api.py  dashboard_api.py  group_api.py  health_api.py  import_api.py  login_api.py  project_api.py  report_api.py  result_api.py  run_api.py  task_api.py  user_api.py  widget_api.py  widget_api.py.rej  widget_config_api.py
ibutsu_client/apis/: __init__.py
ibutsu_client/model/: __init__.py  account_recovery.py  account_registration.py  account_reset.py  artifact.py  artifact_list.py  create_token.py  credentials.py  dashboard.py  dashboard_list.py  get_report_types200_response_inner.py  group.py  group_list.py  health.py  health_info.py  inline_response200.py  login_config.py  login_error.py  login_support.py  login_token.py  model_import.py  pagination.py  project.py  project_list.py  report.py  report_list.py  report_parameters.py  result.py  result_list.py  run.py  run_list.py  token.py  token_list.py  update_run.py  user.py  user_list.py  widget_config.py  widget_config_list.py  widget_param.py  widget_type.py  (+1 more)
ibutsu_client/models/: __init__.py  account_recovery.py  account_registration.py  account_reset.py  artifact.py  artifact_list.py  create_token.py  credentials.py  dashboard.py  dashboard_list.py  get_report_types200_response_inner.py  group.py  group_list.py  health.py  health_info.py  inline_response200.py  login_config.py  login_error.py  login_support.py  login_token.py  model_import.py  pagination.py  project.py  project_list.py  report.py  report_list.py  report_parameters.py  result.py  result_list.py  run.py  run_list.py  token.py  token_list.py  update_run.py  user.py  user_list.py  widget_config.py  widget_config_list.py  widget_param.py  widget_type.py  (+1 more)
test/: __init__.py  conftest.py  test_account_recovery.py  test_account_registration.py  test_account_reset.py  test_admin_project_management_api.py  test_admin_user_management_api.py  test_api_client.py  test_artifact.py  test_artifact_api.py  test_artifact_list.py  test_configuration.py  test_create_token.py  test_credentials.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_list.py  test_exceptions.py  test_get_report_types200_response_inner.py  test_group.py  test_group_api.py  test_group_list.py  test_health.py  test_health_api.py  test_health_info.py  test_import_api.py  test_inline_response200.py  test_login_api.py  test_login_config.py  test_login_error.py  test_login_support.py  test_login_token.py  test_model_import.py  test_pagination.py  test_project.py  test_project_api.py  test_project_list.py  test_report.py  test_report_api.py  test_report_list.py  (+23 more)
